# moq-interop-runner

./: .gitignore  IMPLEMENTATIONS.md  Makefile  README.md  docker-compose.test.yml  generate-certs.sh  generate-report.sh  implementations.json  run-interop-tests.sh
.github/workflows/: build-images.yml  interop-report.yml
adapters/: README.md
adapters/moq-dev-rs/: Dockerfile.relay
adapters/moxygen/: Dockerfile  Dockerfile.relay
builds/moq-dev-js/: Dockerfile.client  biome.json  build.sh  config.json  entrypoint-client.sh  package.json  tsconfig.json
builds/moq-dev-js/src/: main.ts
builds/moq-dev-rs/: Cargo.toml  Dockerfile.client  build.sh  config.json  entrypoint-client.sh
builds/moq-dev-rs/src/: main.rs
builds/xquic/: Dockerfile.client  Dockerfile.relay
docs/: DOCKER-TESTING.md  GETTING-STARTED.md  IMPLEMENTING-A-TEST-CLIENT.md  TEST-CLIENT-INTERFACE.md  VERSION-MATCHING.md
docs/decisions/: 001-tap-output-format.md  002-version-selection-strategy.md
docs/tests/: TEST-CASES.md
lib/: tap-parser.sh
lib/test/: test-tap-parser.sh
